--- a/src/styles/components/_prompts.scss
+++ b/src/styles/components/_prompts.scss
@@ -76,7 +76,7 @@ $module-name: prompts;
           bottom: 0;
           right: 0;
           width: 70%;
-          height: 2em;
+          height: 1.5em;
           background: linear-gradient(to right, rgba(255, 255, 255, 0) 70%, var(--background) 90%); //sass-lint:disable-line no-color-literals
         }
       }
